--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_script:
   
   #Emulator instance
   - echo no | android create avd --force -n test -t android-$ANDROID_EMU_API_LEVEL --abi google_apis/$ANDROID_ABI
-  - emulater -adv test -no-window & #android-wait-fpr emulator
+  - emulater -adv test -no-window & #android-wait-for emulator
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
