--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dist: trusty
 env:
   global:
     - ANDROID_API_LEVEL=30
-    - ANDROID_BUILD_TOOLS_VERSION=30.0.0
+    - ANDROID_BUILD_TOOLS_VERSION:30.0.0
     - ANDROID_EMU_API_LEVEL=22
     - ANDROID_ABI=armeabi-v7a
     - QEMU_AUDIO_DRV=none
@@ -19,6 +19,7 @@ android:
     #BuildTools version
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     
+    #SDK version
     - android-$ANDROID_API_LEVEL
     - android-$ANDROID_EMU_API_LEVEL
 
@@ -28,6 +29,7 @@ android:
     - extra-android-m2repository
     - extra-android-support
     
+    #Building the emulator
     - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
 
   licenses:
