--- a/.travis.yml
+++ b/.travis.yml
@@ -5,31 +5,28 @@ dist: trusty
 env:
   global:
     - ANDROID_API_LEVEL=30
-    - ANDROID_BUILD_TOOLS_VERSION:30.0.0
+    - ANDROID_BUILD_TOOLS_VERSION=30.0.0
     - ANDROID_EMU_API_LEVEL=22
     - ANDROID_ABI=armeabi-v7a
-    - QEMU_AUDIO_DRV=none
+    - QEMU_AUDIO_DRV=none # Remove audio
 
 android:
   components:
-    #Android SDK Tools
     - tools
     - platform-tools
     
-    #BuildTools version
+    # BuildTools version
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    
-    #SDK version
+
     - android-$ANDROID_API_LEVEL
     - android-$ANDROID_EMU_API_LEVEL
-
+    
     # Additional components
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-android-support
     
-    #Building the emulator
     - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
 
   licenses:
@@ -43,10 +40,11 @@ before_install:
 
 before_script:
   - chmod +x gradlew
-  
+
   #Emulator instance
+  # Start the emulator
   - echo no | android create avd --force -n test -t android-$ANDROID_EMU_API_LEVEL --abi google_apis/$ANDROID_ABI
-  - emulator -adv test -no-window & #android-wait-for emulator
+  - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
